# chatroom_rs

./: .gitignore  Cargo.toml
migrations/2023-10-09-163954_create_person/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  routes.rs  schema.rs
src/utils/: utils.rs
